gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/covariant_override.d
version https://git-lfs.github.com/spec/v1
oid sha256:7a6920effb9ddbdd98dc5b858e6da9b066d1a2706443f1e8f265fa322ee7beec
size 1228
